/*
 * Copyright (c) 2017.  Harrison Zhu <wcg6121@gmail.com>
 * This file is part of djob <https://github.com/HZ89/djob>.
 *
 * djob is free software: you can redistribute it and/or modify
 * it under the terms of the GNU General Public License as published by
 * the Free Software Foundation, either version 3 of the License, or
 * (at your option) any later version.
 *
 * djob is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU General Public License for more details.
 *
 * You should have received a copy of the GNU General Public License
 * along with djob.  If not, see <http://www.gnu.org/licenses/>.
 */

syntax = "proto3";
import "message/job.proto";
package message;

message JobQueryParams {
    string Name = 1;
    string Region = 2;
    string SourceNodeName = 3;
    string DistNodeName = 4;
}

message GetRPCConfigResp {
    string ip = 1;
    int32 port = 2;
}

message JobCountResp {
    string Name = 1; // Server node name
    int64 Count = 2; // Job num count in this node
}

message QueryResult {
    int32 Status = 1;
    string Node = 2;
    string Message = 3;
}

message QueryJobRunParams {
    Execution Execution = 1;
    string exp = 2;
}